--- a/LibreriaDefinitiva/wwwroot/style/site.css
+++ b/LibreriaDefinitiva/wwwroot/style/site.css
@@ -8,6 +8,10 @@
     background-color: #aeaeac;
 }
 
+image {
+    box-shadow: 10px 10px 5px #dedede;
+}
+
 nav {
     background-color: #333;
     color: white;
